--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Memory Game</title>
-  </head>
-  <body></body>
+
+    <link rel="stylesheet" href="css/generic/reset.css">
+
+    <link rel="stylesheet" href="css/components/memory-card.css">
+</head>
+
+<body>
+    <div id="root"></div>
+
+    <script src="src/index.js"></script>
+</body>
+
 </html>
