--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     <title>Memory Game</title>
 
     <link rel="stylesheet" href="css/generic/reset.css">
-
+    <link rel="stylesheet" href="css/objects/cards-wrapper/cards-wrapper.css">
     <link rel="stylesheet" href="css/components/memory-card.css">
 </head>
 
 <body>
     <div id="root"></div>
 
-    <script src="src/index.js"></script>
+
+
+    <script src="src/objects/cards-wrapper/index.js"></script>
+    <script src="src/components/memory-card/index.js"></script>
+    <script src="src/pages/game/index.js"></script>
+
 </body>
 
 </html>
