--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700" rel="stylesheet" />
     <link rel="stylesheet" href="css/generic/reset.css" />
+    <link rel="stylesheet" href="css/base/index.css" />
   </head>
 
   <body>
@@ -20,6 +21,7 @@
     <script src="src/objects/transparent-layer/index.js"></script>
     <script src="src/components/game-button/index.js"></script>
     <script src="src/objects/layer-start/index.js"></script>
-    <script src="src/pages/game/index.js"></script>
+    <script src="src/components/flat-button/index.js"></script>
+    <script src="src/pages/signup/index.js"></script>
   </body>
 </html>
