--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="src/components/game-button/index.js"></script>
     <script src="src/objects/layer-start/index.js"></script>
     <script src="src/components/flat-button/index.js"></script>
+    <script src="src/components/welcome-screen/index.js"></script>
     <script src="src/pages/signup/index.js"></script>
   </body>
 </html>
