--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
   <script src="src/objects/input-collabcode/index.js"></script>
   <script src="src/components/form-signup/index.js"></script>
   <script src="src/components/btn-collabcode/index.js"></script>
+  <script src="src/objects/eye-collab/index.js"></script>
   <script src="src/objects/link-collab/index.js"></script>
   <script src="src/components/form-login/index.js"></script>
+  <script src="src/pages/signup/index.js"></script>
   <script src="src/pages/login/index.js"></script>
-  <!-- <script src="src/pages/signup/index.js"></script> -->
+
+  <script src="src/app.js"></script>
 </body>
 
 </html>
