--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <script src="src/components/form-login/index.js"></script>
   <script src="src/pages/signup/index.js"></script>
   <script src="src/pages/login/index.js"></script>
+  <script src="src/pages/game/index.js"></script>
 
   <script src="src/app.js"></script>
 </body>
