--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <script src="src/pages/signup/index.js"></script>
   <script src="src/pages/login/index.js"></script>
   <script src="src/pages/game/index.js"></script>
+  <script src="src/pages/error404/index.js"></script>
 
   <script src="src/app.js"></script>
 </body>
