Desafio final do projeto

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <script src="src/objects/label-collabcode/index.js"></script>
   <script src="src/objects/input-collabcode/index.js"></script>
   <script src="src/objects/eye-collab/index.js"></script>
+  <script src="src/objects/message-Alert/index.js"></script>
   <script src="src/objects/link-collab/index.js"></script>
   <!-- Pages -->
   <script src="src/pages/signup/index.js"></script>
